# Gategraph

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTEXT_GOVERNANCE_MODEL.md  CONTRIBUTING.md  DEVLOG.md  EXTERNAL_REVIEW.md  GOVERNANCE.md  GOVERNANCE_FREEZE_SUMMARY.txt  INVARIANTS.md  KNOWN_LIMITATIONS.md  LICENSE  MAX_SIMULATION_FINDINGS.md  NON_SCOPE.md  OWASP_AGENTIC_AI_MAPPING.md  PRODUCTION.md  PRODUCTION_CHECKLIST.md  README.md  RELEASE_CONTENT_RULES.md  RELEASE_MANIFEST.json  RELEASE_METADATA.json  RELEASE_NOTES.md  RELEASE_PROCESS.md  RELEASE_STATUS.md  REPO_HYGIENE.md  SECURITY.md  SECURITY_MODEL.md  STABLE_REPORT.txt  TRUST_MODEL.md  VERSION.md  config.example.yaml  gategraph.db  gategraph.db-journal  pyproject.toml  six_run_simulation_results.csv  task.example.json
GateGraph/: DEVLOG.md  README.md  RELEASE_NOTES.md  RELEASE_STATUS.md  SECURITY.md  VERSION.md  six_run_simulation_results_fixed.csv
contracts/: capability_token_claims.schema.json  governance_decision.schema.json  monitoring_export.schema.json  normalized_reason.schema.json
db/: schema.sql
docs/: API_CONTRACT.md  ARCHITECTURE.md  ARTIFACT_DETERMINISM.md  BLOCK_C_STRESS_EVIDENCE.md  BLOCK_D_AUDIT_EXPLAIN_EVIDENCE.md  BLOCK_E_DOCUMENTATION_REALITY.md  BOUNDARY_REFERENCES.md  CANDIDATE_CI_GATE.md  CAPABILITY_TOKEN_AUDIT_REDACTION.md  CAPABILITY_TOKEN_KEY_MANAGEMENT.md  CI_EVIDENCE_RUNNER.md  CONCURRENCY_SCOPE_STATEMENT.md  CONTEXT_LIFECYCLE_MODEL.md  CONTROLLED_APPLY.md  CROSS_SESSION_BUDGET_CONTROL.md  CURRENT_RELEASE.md  DELEGATION_BOUNDARY.md  DEPLOYMENT_BOUNDARY.md  DEV_KEYRING_BOUNDARY.md  (+241 more)
(+386 files in other folders)
