# gategraph-release = "v0.13.3_STABLE"
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gategraph"
version = "0.13.3"
description = "Deterministic governance layer for AI-assisted task execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "HumanCoreAI" }
]
keywords = [
  "ai-governance",
  "agent-control",
  "policy-enforcement",
  "audit",
  "runtime-guards"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/humancoreai/Gategraph"
Repository = "https://github.com/humancoreai/Gategraph"
Issues = "https://github.com/humancoreai/Gategraph/issues"

[project.scripts]
gategraph = "src.cli:main"
gategraph-server = "src.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "gategraph*"]
exclude = [
  "tests*",
  "docs*",
  "dist*",
  "operator_logs*",
  "operator_exports*",
  "playbooks*"
]
